# OpenGLTest

./: CMakeLists.txt  Dependency.cmake
lecture_1/: main.cpp
lecture_3/: CMakeLists.txt  Dependency.cmake
lecture_3/shader/: simple.fs  simple.vs
lecture_3/src/: README.md  buffer.cpp  common.cpp  common.h  context.cpp  context.h  main.cpp  program.cpp  program.h  shader.cpp  shader.h
